--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -16,25 +16,32 @@ output:
 
 
 ## What is mean total number of steps taken per day?
+
+#### The histogram shows the total number of steps taken each day
+
+
 ```{r histogram, echo =TRUE, fig.height=6,fig.width=8}
   stepsperday <- aggregate(steps~date,activitydata,sum)
   hist(stepsperday$steps,breaks=20,main="Hist of total number of steps taken each day",col="wheat",xlab="steps")
 
 ```
 
-###The mean of total total number of steps taken per day is
 
-```{r stepsperdaymean, echo =TRUE, cache=TRUE}
+#### The mean of total total number of steps taken per day is
+
+```{r stepsperdaymean,echo =TRUE, cache=TRUE}
   mean(stepsperday$steps)
 ```
 
-###The median of total total number of steps taken per day is
+####The median of total total number of steps taken per day is
 
 ```{r stepsperdaymedian, echo =TRUE, cache=TRUE}
   median(stepsperday$steps)
 ```
 
-## What is the average daily activity pattern?
+## What is the average daily activity pattern?  
+
+####This a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
 ```{r plot, fig.height=6,fig.width=8}
   stepsperinterval <- aggregate(steps~interval,activitydata,mean)
@@ -45,13 +52,15 @@ output:
   stepsperinterval[stepsperinterval$steps == max_value, ]
 ```
 
-###The maximum number of step is 
+###The maximum number of step is  
+
 ```{r maxvalue, results='asis'}
   max_value <- max(stepsperinterval$steps)
   print(max_value) 
 ```
 
-###that corresponds to the interval
+###that corresponds to the interval  
+
 ```{r maxinterval}
   max_interval <- stepsperinterval[stepsperinterval$steps == max_value, ]
   max_interval$interval
@@ -59,7 +68,8 @@ output:
 
 ## Imputing missing values
 
-###The number missing values NA of the activity dataframe are 
+#### The number missing values NA of the activity dataframe are 
+
 ```{r missingvalues}
   for (Var in names(activitydata)) {
     missing <- sum(is.na(activitydata[,Var]))
@@ -69,7 +79,9 @@ output:
   }
 ```
 
-###We create a new dataset that is equal to the original dataset but with the missing data filled in.
+#### I create a new dataset that is equal to the original one but with the missing data filled in. 
+#### In the following code I replace the NA VALUE of steps variable, with the mean for that day
+
 ```{r newdfwithnoNA}
   df_impute <- activitydata
   index <- is.na(df_impute$steps)
@@ -77,13 +89,18 @@ output:
   int_avg <- tapply(df_ign$steps, df_ign$interval, mean, na.rm=TRUE, simplify=T)
   df_impute$steps[index] <- int_avg[as.character(df_impute$interval[index])]
 ```
-###Make a histogram of the total number of steps taken each day
+  
+
+#### The following histogram shows the distribution of the total number of steps taken each day  
+
+
 ```{r histogram_impute, echo =TRUE, fig.height=6,fig.width=8}
   stepsperday_impute <- aggregate(steps~date,df_impute,sum)
   hist(stepsperday_impute$steps,breaks=20,main="Hist of total number of steps taken each day, with missing data replaced",col="wheat",xlab="steps")
 ```
+  
+#### The mean and median total number of steps taken per day are  
 
-###The mean and median total number of steps taken per day are
 ```{r stepsperdaymean_impute, echo =TRUE, cache=TRUE}
   mean(stepsperday_impute$steps)
 ```
@@ -92,7 +109,7 @@ output:
   median(stepsperday_impute$steps)
 ```
 
-#####The mean of the dataframe with imputed values is the same of the original data frame, while the median of the data frame with imputed value is different rom the original one, it has the same value of the mean. this is due to the fact that we replaced the NA values with the mean of values for the same day.
+####The mean of the dataframe with imputed values is the same of the original data frame, while the median of the data frame with imputed value is different rom the original one, it has the same value of the mean. this is due to the fact that we replaced the NA values with the mean of values for the same day.
 
 
 
